removed ssdp debugging, made localIp configurable and improved auto detection